tests/miniJava/pos/001262_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { while ( new int [ 0 ] ) if ( 0 ) { } else { } } }
