tests/miniJava/neg/003885_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { int } } }
